kubernetes/apps/k8s/vaultwarden/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  ports:
    - name: http
      port: 8000
      targetPort: http
  selector:
    app: vaultwarden
